--- a/stats-calculator.html
+++ b/stats-calculator.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./styles.css" />
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="stats-calculator.css" />
     <title>Statistics Calculator</title>
   </head>
   <body>
@@ -50,5 +49,6 @@
         root of the variance.
       </p>
     </div>
+    <script src="stats-calculator.js"></script>
   </body>
 </html>
