--- a/stats-calculator.html
+++ b/stats-calculator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="stats-calculator.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Statistics Calculator</title>
   </head>
   <body>
@@ -16,39 +16,39 @@
       <button type="submit">Calculate</button>
     </form>
     <div class="results">
-      <p class="bold">Mean: <span id="mean"></span></p>
       <p>
         The <dfn>mean</dfn> of a list of numbers is the average, calculated by
         taking the sum of all numbers and dividing that by the count of numbers.
       </p>
-      <p class="bold">Median: <span id="median"></span></p>
+      <p class="bold">Mean: <span id="mean"></span></p>
       <p>
         The <dfn>median</dfn> of a list of numbers is the number that appears in
         the middle of the list, when sorted from least to greatest.
       </p>
-      <p class="bold">Mode: <span id="mode"></span></p>
+      <p class="bold">Median: <span id="median"></span></p>
       <p>
         The <dfn>mode</dfn> of a list of numbers is the number that appears most
         often in the list.
       </p>
-      <p class="bold">Range: <span id="range"></span></p>
+      <p class="bold">Mode: <span id="mode"></span></p>
       <p>
         The <dfn>range</dfn> of a list of numbers is the difference between the
         largest and smallest numbers in the list.
       </p>
-      <p class="bold">Variance: <span id="variance"></span></p>
+      <p class="bold">Range: <span id="range"></span></p>
       <p>
         The <dfn>variance</dfn> of a list of numbers measures how far the values
         are from the mean, on average.
       </p>
-      <p class="bold">
-        Standard Deviation: <span id="standardDeviation"></span>
-      </p>
+      <p class="bold">Variance: <span id="variance"></span></p>
       <p>
         The <dfn>standard deviation</dfn> of a list of numbers is the square
         root of the variance.
       </p>
+      <p class="bold">
+        Standard Deviation: <span id="standardDeviation"></span>
+      </p>
     </div>
-    <script src="stats-calculator.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
